# rust_tests

first-steps/: Cargo.toml  app.txt  main  sensors_report.txt  stuff.json
first-steps/src/: api.rs  async_easy.rs  async_project.rs  client.rs  client_easy.rs  download_sim.rs  error_parsing.rs  expenses_project.rs  file_io.rs  inventory_sys.rs  main.rs  server_easy.rs  task_mngr.rs  timeout_and_channels.rs  transactions.rs
first-steps/src/api_project/: client.rs  client_test.rs  server.rs  state.json
first-steps/src/axum/: client.rs  server.rs
first-steps/src/axum_api/: server.rs
first-steps/src/excercises/: async_medium.rs  enums.rs  excercises.rs  excercises_2.rs  inventory_csv.rs  parse_grade.rs  server.rs  struct.rs  temp_locations.rs
first-steps/src/sensor_monitoring/: client.rs  libs.rs  logger.rs  server.rs
first-steps/src/tcp/: client.rs  server.rs
