[package]
name = "first-steps"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
tokio = {version = "1", features = ["full"]}
fastrand = "2.0"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
bincode = "1.3"

[[bin]]
name = "server"
path = "src/sensor_monitoring/server.rs"

[[bin]]
name = "client"
path = "src/sensor_monitoring/client.rs"

[[bin]]
name = "libs"
path = "src/sensor_monitoring/libs.rs"