[package]
name = "first-steps"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
tokio = {version = "1", features = ["full"]}
fastrand = "2.0"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
bincode = "1.3"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/api_project/server.rs"

[[bin]]
name = "client"
path = "src/api_project/client.rs"

[[bin]]
name = "libs"
path = "src/api_project/libs.rs"